data/derived/comb/progs/unify/prog5333.ml.out
Characters 57-69:
  else mulByDigit i-1 l;;
       ^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
